--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     }
   ],
   "require": {
-    "php": ">=5.6.4"
+    "php": ">=5.6.4",
+    "laravel/framework": "5.3.*",
+    "laravelcollective/html": "5.3.*",
+    "laravel/socialite": "^2.0"
   },
   "autoload": {
     "psr-4": {
