--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,7 @@
   "require": {
     "php": ">=5.6.4",
     "google/recaptcha": "~1.1",
-    "laravel/socialite": "*",
-    "socialiteproviders/manager": "*",
-    "socialiteproviders/steam": "*",
-    "jjiko/socialiteproviders-google":"*",
-    "jjiko/socialiteproviders-twitch":"*"
+    "laravel/socialite": "*"
   },
   "autoload": {
     "psr-4": {
