a lot of changes.. split oauth meta data, twitch, twitter, nest, instagram, some other stuff

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,13 @@
     "psr-4": {
       "Jiko\\Auth\\": "src/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Jiko\\Auth\\Providers\\AuthServiceProvider",
+        "Jiko\\Auth\\Providers\\AuthEventServiceProvider"
+      ]
+    }
   }
 }
