--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,40 @@
   ],
   "require": {
     "php": ">=5.6.4",
-    "google/recaptcha": "~1.1",
-    "laravel/socialite": "*"
+    "facebook/graph-sdk": "^5.6",
+    "google/apiclient": "^2.2",
+    "google/recaptcha": "^1.1",
+    "illuminate/console": "^5.6",
+    "illuminate/redis": "^5.6",
+    "larabros/elogram": "^1.2",
+    "laravel/socialite": "^3.0",
+    "socialiteproviders/discord": "^2.0",
+    "socialiteproviders/manager": "^3.3",
+    "socialiteproviders/spotify": "^3.0",
+    "socialiteproviders/steam": "^1.0",
+    "socialiteproviders/twitch": "^4.0",
+    "zizaco/entrust": "^1.9"
   },
   "autoload": {
     "psr-4": {
       "Jiko\\Auth\\": "src/"
     }
   },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "extra": {
     "laravel": {
       "providers": [
         "Jiko\\Auth\\Providers\\AuthServiceProvider",
-        "Jiko\\Auth\\Providers\\AuthEventServiceProvider",
+        "Jiko\\Auth\\Providers\\AuthEventServiceProvider"
+      ],
+      "dont-discover": [
+        "Jiko\\Auth\\Providers\\CacheableAuthUserServiceProvider",
         "Jiko\\Auth\\Providers\\CacheableEloquentUserProvider"
       ]
     }
